<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.alurwa.animerisuto.ui.animedetail.AnimeDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.animedetail.AnimeDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            goneUnless="@{!viewModel.isDataLoading()}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_img_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        imagePoster="@{viewModel.animeDetail.mainPictureUrl}"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:contentDescription="@string/desc_img_poster"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@{viewModel.animeDetail.title}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Headline6"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_img_poster"
                    tools:text="Your Name." />

                <TextView
                    android:id="@+id/tv_japanese_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="24dp"
                    android:text="@{viewModel.animeDetail.englishTitle}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body1"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_num_episodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tv_episodes_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintEnd_toStartOf="@id/tv_ranked"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_japanese_title" />

                <TextView
                    android:id="@+id/tv_num_episodes_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{String.valueOf(viewModel.animeDetail.numEpisodes)}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/tv_num_episodes"
                    app:layout_constraintStart_toStartOf="@id/tv_num_episodes"
                    app:layout_constraintTop_toBottomOf="@id/tv_num_episodes"
                    tools:text="13" />

                <TextView
                    android:id="@+id/tv_ranked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tv_rank_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintEnd_toStartOf="@id/tv_mean"
                    app:layout_constraintStart_toEndOf="@id/tv_num_episodes"
                    app:layout_constraintTop_toBottomOf="@id/tv_japanese_title" />

                <TextView
                    android:id="@+id/tv_ranked_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{`#` + viewModel.animeDetail.rank.toString()}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/tv_ranked"
                    app:layout_constraintStart_toStartOf="@id/tv_ranked"
                    app:layout_constraintTop_toBottomOf="@id/tv_ranked"
                    tools:text="#124" />

                <TextView
                    android:id="@+id/tv_mean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/tv_score_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_ranked"
                    app:layout_constraintTop_toBottomOf="@id/tv_japanese_title" />

                <TextView
                    android:id="@+id/tv_mean_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@{viewModel.animeDetail.mean.toString()}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.App.Body1"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/tv_mean"
                    app:layout_constraintStart_toStartOf="@id/tv_mean"
                    app:layout_constraintTop_toBottomOf="@id/tv_mean"
                    tools:text="8.8" />

                <TextView
                    android:id="@+id/tv_synopsis"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@{viewModel.synopsis}"
                    android:textAppearance="@style/TextAppearance.App.Caption"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ranked_val"
                    tools:text="jandnadnjdawdajwdndwadadnadadnadawdnawidawndawdawndawdnwddnadadadnawdwaujda" />

                <CheckBox
                    android:id="@+id/cb_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:text="Translate to Indo"
                    app:layout_constraintBottom_toTopOf="@+id/tv_recommendations"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_synopsis" />

                <TextView
                    android:id="@+id/tv_recommendations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/tv_recommendations_info"
                    android:textAppearance="@style/TextAppearance.App.Subtitle1"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_translate" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_recommendations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_recommendations">

                </androidx.recyclerview.widget.RecyclerView>

                <include
                    layout="@layout/content_detail_bottom"
                    bind:animeDetail="@{viewModel.animeDetail}" />


                <!-- <include
                    layout="@layout/title_detail"
                    bind:viewModel.animeDetail="@{viewModel.animeDetail}"/> -->
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb"
            goneUnless="@{viewModel.isDataLoading()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
